--- a/src/Components/Home/Home.module.css
+++ b/src/Components/Home/Home.module.css
@@ -3,6 +3,10 @@
     padding: 0;
 }
 
+.home{
+    /* background-color: var(--fourthT); */
+}
+
 .header{
     position: fixed;
 }
@@ -14,6 +18,8 @@
 .category{
     border-radius: 20px;
     border: 2px solid var(--third);
+    border: 2px solid var(--firstT);
+    /* box-shadow: 0 0 5px 3px var(--firstT); */
     max-width: 1300px;
     margin: auto;
     margin-top: 50px;
@@ -27,4 +33,48 @@
 
 .category_list{
     padding: 0 70px;
+}
+
+.populer{
+    border-radius: 20px;
+    border: 2px solid var(--third);
+    border: 2px solid var(--firstT);
+    /* box-shadow: 0 0 5px 3px var(--firstT); */
+    max-width: 1300px;
+    margin: auto;
+    margin-top: 50px;
+}
+
+.populer_title{
+    padding: 20px 0 20px 40px;
+    font-size: 2rem;
+    font-weight: bold;
+}
+
+.populer_list{
+    padding: 0 70px 10px;
+}
+
+.terbaru{
+    border-radius: 20px;
+    border: 2px solid var(--third);
+    border: 2px solid var(--firstT);
+    /* box-shadow: 0 0 5px 3px var(--firstT); */
+    max-width: 1300px;
+    margin: auto;
+    margin-top: 50px;
+}
+
+.terbaru_title{
+    padding: 20px 0 20px 40px;
+    font-size: 2rem;
+    font-weight: bold;
+}
+
+.terbaru_list{
+    padding: 0 70px 10px;
+}
+
+.footer{
+    margin: 100px 0 0;
 }
