--- a/src/Components/Header/UserTypeSearch.module.css
+++ b/src/Components/Header/UserTypeSearch.module.css
@@ -1,30 +1,31 @@
-*{
-    margin: 0;
-    padding: 0;
+* {
+  margin: 0;
+  padding: 0;
 }
 
-.userTypeSearchCard{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    align-items: center;
-    background-color: var(--third);
-    margin: 5px;
-    padding: 5px;
-    border-radius: 10px;
-    width: fit-content;
+.userTypeSearchCard {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  background-color: var(--third);
+  margin: 5px;
+  padding: 5px;
+  border-radius: 10px;
+  width: fit-content;
+  cursor: pointer;
 }
 
-.userTypeSearchCard_img{
-    width: 20%;
-    margin: 0 10px 0 0;
+.userTypeSearchCard_img {
+  width: 20%;
+  margin: 0 10px 0 0;
 }
 
-.userTypeSearchCard_img img{
-    width: 100%
+.userTypeSearchCard_img img {
+  width: 100%;
 }
 
-.userTypeSearchCard_text{
-    font-size: 1.2rem;
-    font-weight: bold;
+.userTypeSearchCard_text {
+  font-size: 1.2rem;
+  font-weight: bold;
 }
