--- a/src/Components/SearchCategory/SearchCategory.module.css
+++ b/src/Components/SearchCategory/SearchCategory.module.css
@@ -1,30 +1,31 @@
-*{
-    margin: 0;
-    padding: 0;
+* {
+  margin: 0;
+  padding: 0;
 }
 
-.searchCategoryCard{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    align-items: center;
-    background-color: var(--third);
-    margin: 5px 5px 10px;
-    padding: 10px;
-    border-radius: 10px;
-    width: fit-content;
+.searchCategoryCard {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  background-color: var(--third);
+  margin: 5px 5px 10px;
+  padding: 10px;
+  border-radius: 10px;
+  width: fit-content;
+  cursor: pointer;
 }
 
-.searchCategoryCard_img{
-    width: 30%;
-    margin: 0 10px 0 0;
+.searchCategoryCard_img {
+  width: 30%;
+  margin: 0 10px 0 0;
 }
 
-.searchCategoryCard_img img{
-    width: 100%
+.searchCategoryCard_img img {
+  width: 100%;
 }
 
-.searchCategoryCard_text{
-    font-size: 1.4rem;
-    font-weight: bold;
+.searchCategoryCard_text {
+  font-size: 1.4rem;
+  font-weight: bold;
 }
