--- a/src/Components/Header/Header.module.css
+++ b/src/Components/Header/Header.module.css
@@ -78,3 +78,13 @@
   background-color: #04add3;
   color: white;
 }
+
+.searchInput {
+  width: 100%;
+  background-color: #e2e2e2;
+  border: 0;
+  font-size: 1.2rem;
+}
+.searchInput:focus {
+  outline: none;
+}
