--- a/src/Views/User/User.module.css
+++ b/src/Views/User/User.module.css
@@ -25,3 +25,58 @@
 .biodataDiri {
   font-size: 20px;
 }
+
+.biodataDiri p {
+  font-size: 25px;
+  font-weight: bold;
+}
+
+.alamat {
+  font-size: 20px;
+  margin-top: 40px;
+}
+
+.alamat p {
+  font-size: 25px;
+  font-weight: bold;
+}
+
+.ubahAlamat {
+  color: #04add3;
+}
+
+.userSection {
+  max-width: 1300px;
+  margin: auto;
+}
+
+.userContainer {
+  margin: 40px 0;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
+.imageBackground {
+  background-color: rgb(194, 194, 194);
+  border-radius: 10px;
+  padding: 10px;
+  width: 90%;
+  height: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.imageBackground img {
+  width: 100%;
+}
+
+.imageSection {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 25%;
+}
