--- a/src/index.css
+++ b/src/index.css
@@ -3,10 +3,11 @@
   --second: #42855b;
   --third: #90b77d;
   --fourth: #d2d79f;
-  --firstT: rgba(72, 56, 56, 0.5);
+  --firstT: #48383880;
   --secondT: rgba(66, 133, 90, 0.5);
   --thirdT: rgba(144, 183, 125, 0.5);
   --fourthT: rgba(210, 215, 159, 0.5);
   --secondR: rgba(66, 133, 90, 0.1);
   --secondS: rgba(66, 133, 90, 0.06);
+  --fifth: #1e3d2a;
 }
