--- a/src/Components/Products/ProductList.module.css
+++ b/src/Components/Products/ProductList.module.css
@@ -1,9 +1,10 @@
-*{
-    margin: 0;
-    padding: 0;
+* {
+  margin: 0;
+  padding: 0;
 }
 
-.productList{
-    display: flex;
-    flex-direction: row;
+.productList {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
