--- a/src/Views/ProductCategory/ProductCategory.module.css
+++ b/src/Views/ProductCategory/ProductCategory.module.css
@@ -40,3 +40,9 @@
   color: rgb(107, 107, 107);
   padding-right: 10px;
 }
+
+.productSearch {
+  margin-top: 30px;
+  display: flex;
+  flex-wrap: wrap;
+}
