--- a/src/Views/User/User.module.css
+++ b/src/Views/User/User.module.css
@@ -6,14 +6,10 @@
 .headerFill {
   height: 70px;
 }
+
 .userInfo {
   display: flex;
   flex-direction: row;
-}
-
-.coloumTitle {
-  display: flex;
-  flex-direction: column;
 }
 
 .coloumUbah {
@@ -51,7 +47,7 @@
 }
 
 .userContainer {
-  margin: 40px 0;
+  margin: 80px 0;
   width: 100%;
   display: flex;
   flex-direction: row;
@@ -79,4 +75,9 @@
   align-items: center;
   flex-direction: column;
   width: 25%;
+}
+
+.alamatLengkap {
+  display: flex;
+  flex-wrap: wrap;
 }
